networking/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginx
spec:
  selector:
    app: nginx
  type: NodePort #you can configure type as per your requirement
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
